Avoid jumping content on slow connections

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -221,23 +221,29 @@ blockquote {
   }
   .items .item .image {
     width: 240px;
+    height: 180px;
   }
   .items .item .image img {
     width: 240px;
+    height: 180px;
   }
 }
 
 
 @media (min-width: 1600px) {
   html {
-    font-size: 125%;
+    font-size: 125%;    
     max-width: (42em * 1.5);
   }
   .items .item .image {
     width: (240px *1.5);
+    height: (180px *1.5);
+    
+    
   }
   .items .item .image img {
     width: (240px *1.5);
+        height: (180px *1.5);
   }
 }
 
